# financed

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
apps/financed_web/: app.vue  nuxt.config.ts  package.json
apps/financed_web/components/: BlackScholes.client.vue
crates/financed_core/: Cargo.toml  package.json
crates/financed_core/src/: black_scholes_model.rs  lib.rs  main.rs  utils.rs
crates/financed_core/src/black_scholes/: mod.rs
crates/financed_core/src/instrument/: currency.rs  derivative_data.rs  financial_instrument.rs  instrument_metadata.rs  mod.rs  option_data.rs  stock_data.rs
crates/wasm_newtype/: Cargo.toml
crates/wasm_newtype/src/: lib.rs  prelude.rs
crates/wasm_newtype_proc_macro/: Cargo.toml
crates/wasm_newtype_proc_macro/src/: lib.rs
