[package]
name = "financed_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "abc"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"]}
wasm-bindgen = { version = "0.2.100", features = ["serde"] }
derive_builder = "0.20.2"
statrs = "0.18.0"
getrandom = { version = "0.2", features = ["js"] }

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]
