[package]
name = "financed_core"
version = "0.1.0"
edition = "2024"

# [package.metadata]
# wasm-opt = false

# [features]
# default = ["wasm"]
# wasm = ["wasm-bindgen"]

# [lib]
# crate-type = ["cdylib", "rlib"]
# proc-macro = true
# name = "financed_core"
# path = "src/lib.rs"

# [[bin]]
# name = "mybin"
# path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde", "wasmbind"]}
derive_builder = "0.20.2"
statrs = "0.18.0"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0.98"
nutype = { version = "0.6.1", features = ["serde"] }
# wasm-bindgen = { version = "0.2.100", features = ["serde"], optional = true }

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]
