[package]
name = "financed_core"
version = "0.1.0"
edition = "2024"

[package.metadata]
wasm-opt = false

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde", "wasmbind"]}
derive_builder = "0.20.2"
statrs = "0.18.0"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0.98"
nutype = { version = "0.6.1", features = ["serde"] }
wasm-bindgen = { version = "0.2.100", features = ["serde"], optional = true }
wasm_newtype_proc_macro = { path = "../wasm_newtype_proc_macro" }
validator = { version = "0.20.0", features = ["derive"] }
wasm_newtype = { path = "../wasm_newtype" }
js-sys = "0.3.77"
regex = "1.11.1"
tsify = {version = "0.5.5", features = ["js"]}

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]
